<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context=".fragments.LoginFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_radius_bg"
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:gravity="center_vertical|start"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="5dp"
                    android:hint="@string/email_login_hint"
                    android:focusable="true"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:gravity="center_vertical|start"
                        android:drawableLeft="@drawable/ic_password"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="5dp"
                        android:hint="@string/password_login_hint"/>
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/button_hide_look_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_eye_hidden"
                    android:background="@null"/>

            </LinearLayout>

            <Button
                android:text="@string/sign_in_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:id="@+id/button_connextion"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textStyle="normal|bold"
                android:layout_marginTop="5dp"/>
            <Button
                android:id="@+id/button_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textStyle="normal|bold"
                android:layout_marginTop="5dp"
                android:text="@string/login_with_google_account"/>
            <TextView
                android:text="@string/create_new_account_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_creataccount"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:textIsSelectable="false"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:text="@string/reset_pwd_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_reset_password"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textIsSelectable="false"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

</FrameLayout>